[gd_scene format=3 uid="uid://bwrbxvwsy3t1s"]

[ext_resource type="Script" uid="uid://woxs8t4orkmf" path="res://scenes/ui/common/animated_button.gd" id="1_qq8bv"]

[sub_resource type="Animation" id="Animation_qq8bv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_8mu5b"]
resource_name = "hover_end"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.20071103),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_daruc"]
resource_name = "hover_start"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1)]
}

[sub_resource type="Animation" id="Animation_o2a26"]
resource_name = "press"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16666667, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.8, 0.8), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o2a26"]
_data = {
&"RESET": SubResource("Animation_qq8bv"),
&"hover_end": SubResource("Animation_8mu5b"),
&"hover_start": SubResource("Animation_daruc"),
&"press": SubResource("Animation_o2a26")
}

[node name="TitleScreenButton" type="Button" unique_id=1491602402]
offset_right = 145.0
offset_bottom = 31.0
pivot_offset_ratio = Vector2(0.5, 0.5)
text = "Button Text"
script = ExtResource("1_qq8bv")

[node name="anim_player" type="AnimationPlayer" parent="." unique_id=1756720236]
unique_name_in_owner = true
libraries/ = SubResource("AnimationLibrary_o2a26")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
